model/unpackaged/objects/SIP_Task_Step__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Separator__c</fullName>
        <label>Field Separator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Key_Field_List__c</fullName>
        <label>Operation Key Field List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Attach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute Call</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Connection</label>
        <referenceTo>SIP_Connection__c</referenceTo>
        <relationshipLabel>SIP Task Steps</relationshipLabel>
        <relationshipName>SIP_Task_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <label>Step Type</label>
        <picklist>
            <picklistValues>
                <fullName>Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Connection</label>
        <referenceTo>SIP_Connection__c</referenceTo>
        <relationshipLabel>SIP Task Steps (Target Connection)</relationshipLabel>
        <relationshipName>SIP_Task_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task__r.Task_Name__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task</label>
        <referenceTo>SIP_Task__c</referenceTo>
        <relationshipLabel>SIP Task Steps</relationshipLabel>
        <relationshipName>SIP_Task_Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truncate_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Truncate Target?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SIP Task Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Step_Type__c</columns>
        <columns>Operation__c</columns>
        <columns>Truncate_Target__c</columns>
        <columns>Operation_Key_Field_List__c</columns>
        <columns>Order__c</columns>
        <columns>Source_Connection__c</columns>
        <columns>Target_Connection__c</columns>
        <columns>Task__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STP{00000000}</displayFormat>
        <label>SIP Task Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Task Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>